--- a/main.css
+++ b/main.css
@@ -1,11 +1,24 @@
-.card-holder {
+.watch-board {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  justify-content: center;
+  height: 100%;
+}
+
+.watch-column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background: blue;
+  width: 20%;
+  height: 600px;
+  margin: 1%;
+  padding: 1%;
 }
 
 .card {
   background: #000;
   color: #fff;
   text-align: center;
-  width: 20%;
+  width: 80%;
 }
